--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.5.3
   provider: ^6.1.4
   connectivity_plus: ^6.1.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +63,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+    - assets/images/promotions/
+    - assets/images/news/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
